# HotKeyHub-Host

./: CMakeLists.txt  README.md
src/cpp/: jsonParse.cpp  main.cpp  server.cpp  session.cpp  systemController.cpp
src/header/: jsonParse.h  server.h  session.h  systemController.h
