# CMakeList.txt: проект CMake для HotKeyHub_Host; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.10)

# Включение горячей перезагрузки для компиляторов MSVC, если поддерживается.
if (POLICY CMP0141)
  cmake_policy(SET CMP0141 NEW)
  set(CMAKE_MSVC_DEBUG_INFORMATION_FORMAT "$<IF:$<AND:$<C_COMPILER_ID:MSVC>,$<CXX_COMPILER_ID:MSVC>>,$<$<CONFIG:Debug,RelWithDebInfo>:EditAndContinue>,$<$<CONFIG:Debug,RelWithDebInfo>:ProgramDatabase>>")
endif()

project ("HotKeyHub_Host")

set(BOOST_ROOT "C:/Boost/boost_1_90_0")

find_package(Boost REQUIRED)

# Добавьте источник в исполняемый файл этого проекта.
add_executable (HotKeyHub_Host 
"src/cpp/main.cpp"
"src/cpp/server.cpp"
"src/header/server.h"
"src/cpp/systemController.cpp"
"src/header/systemController.h"
"src/header/session.h"
"src/cpp/session.cpp"
)

target_link_libraries(HotKeyHub_Host PRIVATE Boost::headers)

if (CMAKE_VERSION VERSION_GREATER 3.12)
  set_property(TARGET HotKeyHub_Host PROPERTY CXX_STANDARD 20)
endif()

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
